--- a/Docker/SampleMySQL/Dockerfile
+++ b/Docker/SampleMySQL/Dockerfile
@@ -10,4 +10,4 @@ COPY ./<SqlScript>/ /docker-entrypoint-initdb.d/
 # docker run -d -p <HostPort ex 3306>:3306 --name <ContainerName> -e MYSQL_ROOT_PASSWORD=<Password <ImageName>
 # docker exec -it <ContainerName> bash 
 # mysql -u root -p
-# docker run --name <ContainerName> -d --link miqualat-mysql-container:db -p <HostPort ex 8080>:80 phpmyadmin
+# docker run --name <ContainerName> -d --link <ContainerName>:db -p <HostPort ex 8080>:80 phpmyadmin
